--- a/Mobius_metric.ipynb
+++ b/Mobius_metric.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "driven-evanescence",
+   "id": "prime-narrow",
    "metadata": {},
    "source": [
     "### Setup:"
@@ -10,19 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "becoming-puzzle",
+   "execution_count": 13,
+   "id": "saved-right",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import sympy as sp\n",
-    "from sympy.abc import u, v"
+    "from sympy.abc import u, v, x"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "supposed-gothic",
+   "id": "therapeutic-billion",
    "metadata": {},
    "source": [
     "From Wikipedia we have that the Mobius strip is parametrized by\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "surface-dayton",
+   "id": "piano-usage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,8 +48,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "urban-luther",
+   "execution_count": 3,
+   "id": "julian-glass",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'lambdify' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-946eee24eb66>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mlambdify\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mu\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mv\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mArray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mz\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdiff\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mu\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'lambdify' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "lambdify((u, v), sp.Array([x, y, z]).diff(u))(0, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "occupational-sending",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "future-tragedy",
+   "id": "seasonal-wireless",
    "metadata": {},
    "source": [
     "Below, $\\text{dxu} = \\partial_u x.$ We will use the same notation for other derivatives"
@@ -74,20 +96,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "normal-offset",
+   "execution_count": 4,
+   "id": "formed-amplifier",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left(- v + \\frac{1}{v}\\right) \\cos{\\left(u \\right)} + 2 \\left(- v^{2} - \\frac{1}{v^{2}}\\right) \\cos{\\left(2 u \\right)} + 3 \\left(- 0.333333333333333 v^{3} + \\frac{0.333333333333333}{v^{3}}\\right) \\cos{\\left(3 u \\right)}$"
+       "$\\displaystyle - \\frac{v \\sin{\\left(\\frac{u}{2} \\right)} \\cos{\\left(u \\right)}}{2} - \\left(v \\cos{\\left(\\frac{u}{2} \\right)} + 1\\right) \\sin{\\left(u \\right)}$"
       ],
       "text/plain": [
-       "(-v + 1/v)*cos(u) + 2*(-v**2 - 1/v**2)*cos(2*u) + 3*(-0.333333333333333*v**3 + 0.333333333333333/v**3)*cos(3*u)"
+       "-v*sin(u/2)*cos(u)/2 - (v*cos(u/2) + 1)*sin(u)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,20 +121,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "knowing-allah",
+   "execution_count": 6,
+   "id": "inner-package",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left(-1 - \\frac{1}{v^{2}}\\right) \\sin{\\left(u \\right)} + \\left(- 2 v + \\frac{2}{v^{3}}\\right) \\sin{\\left(2 u \\right)} + \\left(- 1.0 v^{2} - \\frac{1.0}{v^{4}}\\right) \\sin{\\left(3 u \\right)}$"
+       "$\\displaystyle \\cos{\\left(\\frac{u}{2} \\right)} \\cos{\\left(u \\right)}$"
       ],
       "text/plain": [
-       "(-1 - 1/v**2)*sin(u) + (-2*v + 2/v**3)*sin(2*u) + (-1.0*v**2 - 1.0/v**4)*sin(3*u)"
+       "cos(u/2)*cos(u)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,20 +146,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "fuzzy-container",
+   "execution_count": 7,
+   "id": "continent-treatment",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle - \\left(- v + \\frac{1}{v}\\right) \\sin{\\left(u \\right)} - 2 \\left(- v^{2} - \\frac{1}{v^{2}}\\right) \\sin{\\left(2 u \\right)} - 3 \\left(- 0.333333333333333 v^{3} + \\frac{0.333333333333333}{v^{3}}\\right) \\sin{\\left(3 u \\right)}$"
+       "$\\displaystyle - \\frac{v \\sin{\\left(\\frac{u}{2} \\right)} \\sin{\\left(u \\right)}}{2} + \\left(v \\cos{\\left(\\frac{u}{2} \\right)} + 1\\right) \\cos{\\left(u \\right)}$"
       ],
       "text/plain": [
-       "-(-v + 1/v)*sin(u) - 2*(-v**2 - 1/v**2)*sin(2*u) - 3*(-0.333333333333333*v**3 + 0.333333333333333/v**3)*sin(3*u)"
+       "-v*sin(u/2)*sin(u)/2 + (v*cos(u/2) + 1)*cos(u)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,20 +171,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "ancient-hometown",
+   "execution_count": 8,
+   "id": "alpine-computer",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left(-1 - \\frac{1}{v^{2}}\\right) \\cos{\\left(u \\right)} + \\left(- 2 v + \\frac{2}{v^{3}}\\right) \\cos{\\left(2 u \\right)} + \\left(- 1.0 v^{2} - \\frac{1.0}{v^{4}}\\right) \\cos{\\left(3 u \\right)}$"
+       "$\\displaystyle \\sin{\\left(u \\right)} \\cos{\\left(\\frac{u}{2} \\right)}$"
       ],
       "text/plain": [
-       "(-1 - 1/v**2)*cos(u) + (-2*v + 2/v**3)*cos(2*u) + (-1.0*v**2 - 1.0/v**4)*cos(3*u)"
+       "sin(u)*cos(u/2)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,20 +196,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "liked-spray",
+   "execution_count": 9,
+   "id": "distributed-binding",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left(- 2 v + \\frac{2}{v}\\right) \\cos{\\left(u \\right)}$"
+       "$\\displaystyle \\frac{v \\cos{\\left(\\frac{u}{2} \\right)}}{2}$"
       ],
       "text/plain": [
-       "(-2*v + 2/v)*cos(u)"
+       "v*cos(u/2)/2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,20 +221,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "adapted-identification",
+   "execution_count": 10,
+   "id": "finished-audio",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left(-2 - \\frac{2}{v^{2}}\\right) \\sin{\\left(u \\right)}$"
+       "$\\displaystyle \\sin{\\left(\\frac{u}{2} \\right)}$"
       ],
       "text/plain": [
-       "(-2 - 2/v**2)*sin(u)"
+       "sin(u/2)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "encouraging-costs",
+   "id": "novel-glucose",
    "metadata": {},
    "source": [
     "### Finally we can calculate $ds^2 = dx^2 + dy^2 + dz^2$"
@@ -232,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "simplified-tackle",
+   "id": "geological-serbia",
    "metadata": {},
    "source": [
     "$du^2$ term:"
@@ -240,20 +262,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "wrapped-workshop",
+   "execution_count": 11,
+   "id": "moral-water",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\frac{4 v^{4} \\left(v^{2} - 1\\right)^{2} \\cos^{2}{\\left(u \\right)} + \\left(v^{2} \\left(v^{2} - 1\\right) \\sin{\\left(u \\right)} + 2 v \\left(v^{4} + 1\\right) \\sin{\\left(2 u \\right)} + \\left(v^{6} - 1\\right) \\sin{\\left(3 u \\right)}\\right)^{2} + \\left(v^{2} \\left(v^{2} - 1\\right) \\cos{\\left(u \\right)} + 2 v \\left(v^{4} + 1\\right) \\cos{\\left(2 u \\right)} + \\left(v^{6} - 1\\right) \\cos{\\left(3 u \\right)}\\right)^{2}}{v^{6}}$"
+       "$\\displaystyle v^{2} \\cos^{2}{\\left(\\frac{u}{2} \\right)} + \\frac{v^{2}}{4} + 2 v \\cos{\\left(\\frac{u}{2} \\right)} + 1$"
       ],
       "text/plain": [
-       "(4*v**4*(v**2 - 1)**2*cos(u)**2 + (v**2*(v**2 - 1)*sin(u) + 2*v*(v**4 + 1)*sin(2*u) + (v**6 - 1)*sin(3*u))**2 + (v**2*(v**2 - 1)*cos(u) + 2*v*(v**4 + 1)*cos(2*u) + (v**6 - 1)*cos(3*u))**2)/v**6"
+       "v**2*cos(u/2)**2 + v**2/4 + 2*v*cos(u/2) + 1"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "serial-soundtrack",
+   "id": "outer-founder",
    "metadata": {},
    "source": [
     "$dv^2$ term:"
@@ -272,20 +294,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "paperback-daughter",
+   "execution_count": 12,
+   "id": "secret-combination",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\frac{4 v^{4} \\left(v^{2} + 1\\right)^{2} \\sin^{2}{\\left(u \\right)} + \\left(v^{2} \\left(v^{2} + 1\\right) \\sin{\\left(u \\right)} + 2 v \\left(v^{4} - 1\\right) \\sin{\\left(2 u \\right)} + \\left(v^{6} + 1\\right) \\sin{\\left(3 u \\right)}\\right)^{2} + \\left(v^{2} \\left(v^{2} + 1\\right) \\cos{\\left(u \\right)} + 2 v \\left(v^{4} - 1\\right) \\cos{\\left(2 u \\right)} + \\left(v^{6} + 1\\right) \\cos{\\left(3 u \\right)}\\right)^{2}}{v^{8}}$"
+       "$\\displaystyle 1$"
       ],
       "text/plain": [
-       "(4*v**4*(v**2 + 1)**2*sin(u)**2 + (v**2*(v**2 + 1)*sin(u) + 2*v*(v**4 - 1)*sin(2*u) + (v**6 + 1)*sin(3*u))**2 + (v**2*(v**2 + 1)*cos(u) + 2*v*(v**4 - 1)*cos(2*u) + (v**6 + 1)*cos(3*u))**2)/v**8"
+       "1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "welcome-wilson",
+   "id": "express-pulse",
    "metadata": {},
    "source": [
     "$dudv$ term:"
@@ -305,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "flying-cinema",
+   "id": "powered-frank",
    "metadata": {},
    "outputs": [
     {
@@ -328,19 +350,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "foreign-russian",
+   "id": "behavioral-scottish",
    "metadata": {},
    "source": [
     "Thus we finally have \n",
     "$$\n",
-    "ds^2 = \\bigg[ \\bigg(\\frac{1}{4} \\cos^2 \\frac{u}{2} + \\frac{1}{16}\\bigg)v^2 + v \\cos \\frac{u}{2} + 1 \\bigg] du^2 + \\frac{1}{4} dv^2 \n",
+    "ds^2 = \\bigg[ \\bigg( \\cos^2 \\frac{u}{2} + \\frac{1}{4}\\bigg)v^2 + 2v \\cos \\frac{u}{2} + 1 \\bigg] du^2 + dv^2 \n",
     "$$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "nonprofit-increase",
+   "id": "bulgarian-fishing",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -362,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
