played around with torus and parameterization for extra variable of mobius

--- a/nonmobius/nonmobius_solution.ipynb
+++ b/nonmobius/nonmobius_solution.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "c3e7623c-88f2-4909-b4cd-49b873f4d8c8",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "db8bb503-a9a1-4c40-a4f1-643d02a987d0",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "0f762d0d-4047-42a5-a3e7-f42382c7d77a",
    "metadata": {},
    "outputs": [
@@ -222,6 +222,234 @@
     "\n",
     "einstein.tensor().simplify()\n",
     "print_ein(einstein)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "dd435861-b819-4db6-9349-70bee633fb97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hussain/miniconda3/lib/python3.8/site-packages/IPython/lib/latextools.py:126: MatplotlibDeprecationWarning: \n",
+      "The to_png function was deprecated in Matplotlib 3.4 and will be removed two minor releases later. Use mathtext.math_to_image instead.\n",
+      "  mt.to_png(f, s, fontsize=12, dpi=dpi, color=color)\n",
+      "/home/hussain/miniconda3/lib/python3.8/site-packages/IPython/lib/latextools.py:126: MatplotlibDeprecationWarning: \n",
+      "The to_rgba function was deprecated in Matplotlib 3.4 and will be removed two minor releases later. Use mathtext.math_to_image instead.\n",
+      "  mt.to_png(f, s, fontsize=12, dpi=dpi, color=color)\n",
+      "/home/hussain/miniconda3/lib/python3.8/site-packages/IPython/lib/latextools.py:126: MatplotlibDeprecationWarning: \n",
+      "The to_mask function was deprecated in Matplotlib 3.4 and will be removed two minor releases later. Use mathtext.math_to_image instead.\n",
+      "  mt.to_png(f, s, fontsize=12, dpi=dpi, color=color)\n",
+      "/home/hussain/miniconda3/lib/python3.8/site-packages/IPython/lib/latextools.py:126: MatplotlibDeprecationWarning: \n",
+      "The MathtextBackendBitmap class was deprecated in Matplotlib 3.4 and will be removed two minor releases later. Use mathtext.math_to_image instead.\n",
+      "  mt.to_png(f, s, fontsize=12, dpi=dpi, color=color)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\left[\\begin{matrix}0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\end{matrix}\\right] & \\left[\\begin{matrix}0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\end{matrix}\\right] & \\left[\\begin{matrix}0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\end{matrix}\\right] & \\left[\\begin{matrix}0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\end{matrix}\\right]\\\\\\left[\\begin{matrix}0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\end{matrix}\\right] & \\left[\\begin{matrix}0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\end{matrix}\\right] & \\left[\\begin{matrix}0 & 0 & 0 & 0\\\\0 & 0 & \\frac{- 2 f{\\left(u,v \\right)} \\frac{\\partial^{2}}{\\partial v^{2}} f{\\left(u,v \\right)} + \\left(\\frac{\\partial}{\\partial v} f{\\left(u,v \\right)}\\right)^{2}}{4 f^{2}{\\left(u,v \\right)}} & 0\\\\0 & \\frac{2 f{\\left(u,v \\right)} \\frac{\\partial^{2}}{\\partial v^{2}} f{\\left(u,v \\right)} - \\left(\\frac{\\partial}{\\partial v} f{\\left(u,v \\right)}\\right)^{2}}{4 f^{2}{\\left(u,v \\right)}} & 0 & 0\\\\0 & 0 & 0 & 0\\end{matrix}\\right] & \\left[\\begin{matrix}0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\end{matrix}\\right]\\\\\\left[\\begin{matrix}0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\end{matrix}\\right] & \\left[\\begin{matrix}0 & 0 & 0 & 0\\\\0 & 0 & \\frac{\\frac{\\partial^{2}}{\\partial v^{2}} f{\\left(u,v \\right)}}{2} - \\frac{\\left(\\frac{\\partial}{\\partial v} f{\\left(u,v \\right)}\\right)^{2}}{4 f{\\left(u,v \\right)}} & 0\\\\0 & - \\frac{\\frac{\\partial^{2}}{\\partial v^{2}} f{\\left(u,v \\right)}}{2} + \\frac{\\left(\\frac{\\partial}{\\partial v} f{\\left(u,v \\right)}\\right)^{2}}{4 f{\\left(u,v \\right)}} & 0 & 0\\\\0 & 0 & 0 & 0\\end{matrix}\\right] & \\left[\\begin{matrix}0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\end{matrix}\\right] & \\left[\\begin{matrix}0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\end{matrix}\\right]\\\\\\left[\\begin{matrix}0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\end{matrix}\\right] & \\left[\\begin{matrix}0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\end{matrix}\\right] & \\left[\\begin{matrix}0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\end{matrix}\\right] & \\left[\\begin{matrix}0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\end{matrix}\\right]\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "⎡⎡0  0  0  0⎤                               ⎡0  0  0  0⎤                      \n",
+       "⎢⎢          ⎥                               ⎢          ⎥                      \n",
+       "⎢⎢0  0  0  0⎥                               ⎢0  0  0  0⎥                      \n",
+       "⎢⎢          ⎥                               ⎢          ⎥                      \n",
+       "⎢⎢0  0  0  0⎥                               ⎢0  0  0  0⎥                      \n",
+       "⎢⎢          ⎥                               ⎢          ⎥                      \n",
+       "⎢⎣0  0  0  0⎦                               ⎣0  0  0  0⎦                      \n",
+       "⎢                                                                             \n",
+       "⎢                                                                             \n",
+       "⎢                                                                             \n",
+       "⎢                                                                             \n",
+       "⎢                                                                             \n",
+       "⎢                                                                             \n",
+       "⎢                                                                             \n",
+       "⎢                                                                             \n",
+       "⎢⎡0  0  0  0⎤                               ⎡0  0  0  0⎤                      \n",
+       "⎢⎢          ⎥                               ⎢          ⎥                      \n",
+       "⎢⎢0  0  0  0⎥                               ⎢0  0  0  0⎥                      \n",
+       "⎢⎢          ⎥                               ⎢          ⎥                      \n",
+       "⎢⎢0  0  0  0⎥                               ⎢0  0  0  0⎥                      \n",
+       "⎢⎢          ⎥                               ⎢          ⎥                      \n",
+       "⎢⎣0  0  0  0⎦                               ⎣0  0  0  0⎦                      \n",
+       "⎢                                                                             \n",
+       "⎢                                                                             \n",
+       "⎢                                                                             \n",
+       "⎢                                                                             \n",
+       "⎢                                                                             \n",
+       "⎢                                                                             \n",
+       "⎢                                                                             \n",
+       "⎢                                                                             \n",
+       "⎢              ⎡0                 0                               0           \n",
+       "⎢              ⎢                                                              \n",
+       "⎢              ⎢                                      2                       \n",
+       "⎢              ⎢                                     ∂                        \n",
+       "⎢              ⎢                                    ───(f(u, v))   ⎛∂         \n",
+       "⎢              ⎢                                      2            ⎜──(f(u, v)\n",
+       "⎢⎡0  0  0  0⎤  ⎢                                    ∂v             ⎝∂v        \n",
+       "⎢⎢          ⎥  ⎢0                 0                 ──────────── - ───────────\n",
+       "⎢⎢0  0  0  0⎥  ⎢                                         2           4⋅f(u, v)\n",
+       "⎢⎢          ⎥  ⎢                                                              \n",
+       "⎢⎢0  0  0  0⎥  ⎢       2                                                      \n",
+       "⎢⎢          ⎥  ⎢      ∂                          2                            \n",
+       "⎢⎣0  0  0  0⎦  ⎢     ───(f(u, v))   ⎛∂          ⎞                             \n",
+       "⎢              ⎢       2            ⎜──(f(u, v))⎟                             \n",
+       "⎢              ⎢     ∂v             ⎝∂v         ⎠                             \n",
+       "⎢              ⎢0  - ──────────── + ──────────────                0           \n",
+       "⎢              ⎢          2           4⋅f(u, v)                               \n",
+       "⎢              ⎢                                                              \n",
+       "⎢              ⎣0                 0                               0           \n",
+       "⎢                                                                             \n",
+       "⎢⎡0  0  0  0⎤                               ⎡0  0  0  0⎤                      \n",
+       "⎢⎢          ⎥                               ⎢          ⎥                      \n",
+       "⎢⎢0  0  0  0⎥                               ⎢0  0  0  0⎥                      \n",
+       "⎢⎢          ⎥                               ⎢          ⎥                      \n",
+       "⎢⎢0  0  0  0⎥                               ⎢0  0  0  0⎥                      \n",
+       "⎢⎢          ⎥                               ⎢          ⎥                      \n",
+       "⎣⎣0  0  0  0⎦                               ⎣0  0  0  0⎦                      \n",
+       "\n",
+       "                                                ⎡0  0  0  0⎤                  \n",
+       "                                                ⎢          ⎥                  \n",
+       "                                                ⎢0  0  0  0⎥                  \n",
+       "                                                ⎢          ⎥                  \n",
+       "                                                ⎢0  0  0  0⎥                  \n",
+       "                                                ⎢          ⎥                  \n",
+       "                                                ⎣0  0  0  0⎦                  \n",
+       "                                                                              \n",
+       "         ⎡0                     0                                         0   \n",
+       "         ⎢                                                                    \n",
+       "         ⎢                                                          2         \n",
+       "         ⎢                                                         ∂          \n",
+       "         ⎢                                            - 2⋅f(u, v)⋅───(f(u, v))\n",
+       "         ⎢                                                          2         \n",
+       "         ⎢                                                        ∂v          \n",
+       "         ⎢0                     0                     ────────────────────────\n",
+       "         ⎢                                                               2    \n",
+       "         ⎢                                                            4⋅f (u, \n",
+       "         ⎢                                                                    \n",
+       "         ⎢               2                         2                          \n",
+       "         ⎢              ∂             ⎛∂          ⎞                           \n",
+       "         ⎢   2⋅f(u, v)⋅───(f(u, v)) - ⎜──(f(u, v))⎟                           \n",
+       "         ⎢               2            ⎝∂v         ⎠                           \n",
+       "         ⎢             ∂v                                                     \n",
+       "         ⎢0  ───────────────────────────────────────                      0   \n",
+       "         ⎢                     2                                              \n",
+       "         ⎢                  4⋅f (u, v)                                        \n",
+       "         ⎢                                                                    \n",
+       "         ⎣0                     0                                         0   \n",
+       "                                                                              \n",
+       "     0⎤                                                                       \n",
+       "      ⎥                                                                       \n",
+       "      ⎥                                                                       \n",
+       "  2   ⎥                                                                       \n",
+       " ⎞    ⎥                                                                       \n",
+       ")⎟    ⎥                                                                       \n",
+       " ⎠    ⎥                                         ⎡0  0  0  0⎤                  \n",
+       "───  0⎥                                         ⎢          ⎥                  \n",
+       "      ⎥                                         ⎢0  0  0  0⎥                  \n",
+       "      ⎥                                         ⎢          ⎥                  \n",
+       "      ⎥                                         ⎢0  0  0  0⎥                  \n",
+       "      ⎥                                         ⎢          ⎥                  \n",
+       "      ⎥                                         ⎣0  0  0  0⎦                  \n",
+       "      ⎥                                                                       \n",
+       "      ⎥                                                                       \n",
+       "     0⎥                                                                       \n",
+       "      ⎥                                                                       \n",
+       "      ⎥                                                                       \n",
+       "     0⎦                                                                       \n",
+       "                                                                              \n",
+       "                                                ⎡0  0  0  0⎤                  \n",
+       "                                                ⎢          ⎥                  \n",
+       "                                                ⎢0  0  0  0⎥                  \n",
+       "                                                ⎢          ⎥                  \n",
+       "                                                ⎢0  0  0  0⎥                  \n",
+       "                                                ⎢          ⎥                  \n",
+       "                                                ⎣0  0  0  0⎦                  \n",
+       "\n",
+       "                       ⎡0  0  0  0⎤⎤\n",
+       "                       ⎢          ⎥⎥\n",
+       "                       ⎢0  0  0  0⎥⎥\n",
+       "                       ⎢          ⎥⎥\n",
+       "                       ⎢0  0  0  0⎥⎥\n",
+       "                       ⎢          ⎥⎥\n",
+       "                       ⎣0  0  0  0⎦⎥\n",
+       "                                   ⎥\n",
+       "                   0⎤              ⎥\n",
+       "                    ⎥              ⎥\n",
+       "                2   ⎥              ⎥\n",
+       "   ⎛∂          ⎞    ⎥              ⎥\n",
+       " + ⎜──(f(u, v))⎟    ⎥              ⎥\n",
+       "   ⎝∂v         ⎠    ⎥              ⎥\n",
+       "                    ⎥              ⎥\n",
+       "─────────────────  0⎥  ⎡0  0  0  0⎤⎥\n",
+       "                    ⎥  ⎢          ⎥⎥\n",
+       "v)                  ⎥  ⎢0  0  0  0⎥⎥\n",
+       "                    ⎥  ⎢          ⎥⎥\n",
+       "                    ⎥  ⎢0  0  0  0⎥⎥\n",
+       "                    ⎥  ⎢          ⎥⎥\n",
+       "                    ⎥  ⎣0  0  0  0⎦⎥\n",
+       "                    ⎥              ⎥\n",
+       "                    ⎥              ⎥\n",
+       "                   0⎥              ⎥\n",
+       "                    ⎥              ⎥\n",
+       "                    ⎥              ⎥\n",
+       "                    ⎥              ⎥\n",
+       "                   0⎦              ⎥\n",
+       "                                   ⎥\n",
+       "                                   ⎥\n",
+       "                                   ⎥\n",
+       "                                   ⎥\n",
+       "                                   ⎥\n",
+       "                                   ⎥\n",
+       "                                   ⎥\n",
+       "                       ⎡0  0  0  0⎤⎥\n",
+       "                       ⎢          ⎥⎥\n",
+       "                       ⎢0  0  0  0⎥⎥\n",
+       "                       ⎢          ⎥⎥\n",
+       "                       ⎢0  0  0  0⎥⎥\n",
+       "                       ⎢          ⎥⎥\n",
+       "                       ⎣0  0  0  0⎦⎥\n",
+       "                                   ⎥\n",
+       "                                   ⎥\n",
+       "                                   ⎥\n",
+       "                                   ⎥\n",
+       "                                   ⎥\n",
+       "                                   ⎥\n",
+       "                                   ⎥\n",
+       "                       ⎡0  0  0  0⎤⎥\n",
+       "                       ⎢          ⎥⎥\n",
+       "                       ⎢0  0  0  0⎥⎥\n",
+       "                       ⎢          ⎥⎥\n",
+       "                       ⎢0  0  0  0⎥⎥\n",
+       "                       ⎢          ⎥⎥\n",
+       "                       ⎣0  0  0  0⎦⎦"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c1 = sp.Function(\"c_1\")(u)\n",
+    "c2 = sp.Function(\"C_2\")(u)\n",
+    "\n",
+    "f = sp.Function(\"f\")(u, v)#1/4 * (v*c1 + c2)**2\n",
+    "\n",
+    "\n",
+    "g = MetricTensor(\n",
+    "    sp.Array(\n",
+    "        np.diag([1, -f, -1, -1]\n",
+    "               )\n",
+    "    ),\n",
+    "    syms=[t, u, v, w]\n",
+    ")\n",
+    "\n",
+    "RiemannCurvatureTensor.from_metric(g).tensor()"
    ]
   },
   {
